--- a/app/src/main/res/layout/fragment_film_info.xml
+++ b/app/src/main/res/layout/fragment_film_info.xml
@@ -11,71 +11,69 @@
         android:layout_width="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="24dp"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="4dp">
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:layout_gravity="center"
+                android:src="@drawable/not_image_film"
                 app:imageUrl="@{viewModel.filmData.imageUrl}"
                 app:defaultImage="@{@drawable/not_image_film}"
                 />
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/NameFilm"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="24dp"
                 android:textSize="26sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:text="@{viewModel.filmData.localizedName}"
                 />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/Genres"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="16sp"
-                android:text="@{viewModel.getGenresAsString()}"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="@{viewModel.getGenresAndYearFilmAsString()}"
                 />
-
-            <TextView
-                android:id="@+id/YearFilm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="16sp"
-                android:text="@{viewModel.yearFilmAsString}"/>
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp">
             <TextView
                 android:id="@+id/Rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
                 android:textSize="28sp"
                 android:textColor="@color/base_blue"
+                android:layout_marginRight="5dp"
                 android:text="@{viewModel.getRatingFilmAsString()}"/>
 
             <TextView
                 android:id="@+id/RatingServiceName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
                 android:text="@string/movie_search_service"
                 android:textColor="@color/base_blue"
                 android:textSize="16sp" />
@@ -85,8 +83,11 @@
                 android:id="@+id/DescriptionFilm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:textSize="16sp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:textSize="14sp"
+                android:lineHeight="20dp"
                 android:textColor="@color/black"
                 android:text="@{viewModel.filmData.description}"/>
 
