--- a/app/src/main/res/layout/fragment_films_list.xml
+++ b/app/src/main/res/layout/fragment_films_list.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false"
+            android:layout_marginBottom="8dp"
             />
 
         <TextView
@@ -38,8 +39,10 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             tools:listitem="@layout/item_film"
+            android:paddingTop="8dp"
             android:paddingLeft="16sp"
             android:paddingRight="16sp"
+            android:layout_gravity="center"
             />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
