--- a/app/src/main/res/layout/item_film.xml
+++ b/app/src/main/res/layout/item_film.xml
@@ -1,32 +1,38 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginBottom="8dp"
-    >
+    android:layout_gravity="center"
+    android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="160dp"
+        android:layout_width="match_parent"
         android:layout_height="222dp"
-        android:layout_margin="10dp"
         app:cardElevation="6dp"
-        app:cardCornerRadius="4dp">
+        android:layout_gravity="center"
+        app:cardCornerRadius="4dp"
+        >
 
         <ImageView
             android:id="@+id/HeadFilm"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            />
 
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/NameFilm"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textAlignment="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
         android:textSize="16sp"
         android:textStyle="bold"
         android:ellipsize="end"
